--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="favorite_photos">Favorite Photos:</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="new_mars_photo_android_textsize">New Mars Photo android:textSize=</string>
+    <string name="new_mars_photo">New Mars Photo</string>
 </resources>
