--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="new_mars_photo_android_textsize">New Mars Photo android:textSize=</string>
     <string name="new_mars_photo">New Mars Photo</string>
+    <string name="load_more">Load More</string>
 </resources>
